syntax = "proto3";
// proto/user.proto

syntax = "proto3";

package user;

service SessionRedisService {
    rpc StoreSessionDataToRedis (StoreSessionToRedisRequest) returns (StoreSessionToRedisResponse);
    rpc CheckSessionDataInRedis (CheckSessionInRedisRequest) returns (CheckSessionInRedisResponse);
    rpc DeleteSessionDataInRedisById (DeleteSessionInRedisByIdRequest) returns (DeleteSessionDataInRedisByIdResponse);
}

message StoreSessionToRedisRequest{
    SessionData sessionData = 1 ; 
    int32 exptime = 2 ; 
}

message StoreSessionToRedisResponse{
    bool success = 1 ;
    SessionData sessionData = 2  ; 
    string message = 3 ;  
}

message SessionData {
    string sessionID = 1 ; 
    string userUUID = 2 ; 
    string userEmail = 3 ;
    string userName = 4 ; 
}

message CheckSessionInRedisRequest{
    string sessionID = 1 ; 
}

message CheckSessionInRedisResponse{
    bool success = 1 ;
    SessionData sessionData = 2 ; 
}

message CheckSessionValidInDbRequest{
    string sessionID = 1 ;
}
message CheckSessionValidInDbResponse{
    bool sucess = 1 ; 
    SessionData sessionData = 2 ; 
    string message = 3 ; 
}

message DeleteSessionInRedisByIdRequest{
    string sessionID = 1 ; 
}

message DeleteSessionDataInRedisByIdResponse{
    bool  success = 1 ; 
    string message = 2 ; 
}